fixed slider thumbnail spacing issue and footer menu size presets

--- a/css/base/plugins/jquery.cycle/jquery.cycle.css
+++ b/css/base/plugins/jquery.cycle/jquery.cycle.css
@@ -14,6 +14,13 @@
     z-index: 80;
     list-style: none;
 }
+#featured-content-slider-nav li {
+    width: 140px;
+    height: 70px;
+}
+.featured-content-slider-thumbnail  {
+
+}
 /*
 #featured-content-slider-nav img {
     border: 2px solid #000;
